Add flexbox functionality to body + header
Link stylesheet to index.html

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,10 @@
 body {
-
+ display:flex;
+ flex-direction: column;
 }
 
 .header {
-
+  display: flex;
 }
 
 .header_logo{
@@ -79,5 +80,5 @@ li {
 }
 
 .footer {
-    
+
 }
