--- a/styles.css
+++ b/styles.css
@@ -67,15 +67,43 @@ li {
 }
 
 .info_section {
-
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f9faf8;
+  
 }
 
 .info_header {
-
+ font-size: 36px;
+ font-weight: bold;
+ color: #1F2937;
+ margin-top: 40px;
 }
 
 .info_images {
+ display:flex;
+ margin-bottom: 76px;
+}
 
+.image_chunk {
+  display:flex;
+  flex-direction: column;
+  margin: 40px;
+  align-items: center;
+}
+
+.fake_image {
+  width: 100px;
+  height: 100px;
+  border: 2px solid #3882f6;
+  margin-bottom: 10px;
+  border-radius: 5px;
+}
+
+.description {
+  text-align: center;
+  
 }
 
 .quote_section {
@@ -104,7 +132,7 @@ li {
 }
 
 .signup_section {
-
+  background-color: #f9faf8;
 }
 
 .signup_box {
