--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ li {
 
 .intro_section {
   display:flex;
+  justify-content: center;
 }
 
 .intro_left {
@@ -60,6 +61,12 @@ li {
 
 .button {
   background-color: #3882f6;
+  color:#e5e7eb;
+  font-weight: bold;
+  height: 36px;
+  width: 96px;
+  border-radius: 5px;
+  
 }
 
 .image {
@@ -124,23 +131,43 @@ li {
 .quote {
   font-size: 36px;
   font-style: italic;
+  font-weight: 300;
+  color: #2b2b2e;
 }
 
 .quote_person {
   font-weight: bold;
-  
+  margin-left: auto;
 }
 
 .signup_section {
   background-color: #f9faf8;
+  display: flex;
+  justify-content: center;
 }
 
 .signup_box {
+ background-color: #3882f6;
+ display:flex;
+ align-items: center;
+ width: 40%;
+ margin: 40px;
+ border-radius: 10px;
 
 }
 
 .signup_description {
+ color: #f9faf8;
+ margin: 30px;
+ margin-left: 20%;
+ margin-right: auto;
+ font-size: 20px;
+}
 
+.signup_box .button {
+  border: 2px solid #e5e7eb;
+  margin-right: 20%;
+  margin-left: auto;
 }
 
 .footer {
