Adjust intro section layout

--- a/styles.css
+++ b/styles.css
@@ -19,14 +19,14 @@ body {
 
 .header_logo {
   margin-right: auto;
-  margin-left: 30%;
+  margin-left: 28%;
   font-size: 24px;
   
 }
 
 .right-links {
   margin-left: auto;
-  margin-right: 30%;
+  margin-right: 28%;
 }
 
 ul {
@@ -36,6 +36,7 @@ ul {
 }
 
 li {
+ margin-left: 10px;
 
 }
 
@@ -48,15 +49,18 @@ li {
   display:flex;
   flex-direction: column;
   justify-content: center;
+  width: 500px;
 }
 
 .welcome {
   font-size: 48px;
   font-weight: bold;
+  margin: 5px;
 }
 
 .hello {
   font-size: 18px;
+  margin:5px;
 }
 
 .button {
@@ -66,11 +70,17 @@ li {
   height: 36px;
   width: 96px;
   border-radius: 5px;
-  
+  border: 1px solid #3882f6;
+}
+
+.intro_left .button {
+  margin: 5px
 }
 
 .image {
-  
+  width: auto;
+  max-height: 350px;
+  margin-bottom: 30px;
 }
 
 .info_section {
